加入了暴走事件api的视频内容

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -10,4 +10,6 @@
     <item name="tl_home" type="id">home界面的TabLayout</item>
     <item name="vp_home" type="id">home界面的ViewPager</item>
     <item name="rv_refresh" type="id">刷新</item>
+    <item name="tb_webViedo" type="id" />
+    <item name="vv_webViedo" type="id" />
 </resources>
