--- a/app/src/main/res/layout/item_information.xml
+++ b/app/src/main/res/layout/item_information.xml
@@ -32,11 +32,12 @@
         android:layout_height="70dp"
         />
 </LinearLayout>
-
+<!--这是一根线-->
     <ImageView
         android:layout_marginRight="2dp"
         android:layout_marginLeft="2dp"
         android:layout_width="match_parent"
         android:layout_height="0.1dp"
         android:background="@color/colorPrimary"/>
+
 </LinearLayout>
